--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "request": "~2.11.4",
     "jwt-simple": "~0.1.0",
-    "moment": "~1.7.2"
+    "moment": "~1.7.2",
+    "async": "~0.1.22"
   }
 }
