--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "query windows azure active directory",
   "main": "./lib",
   "scripts": {
-    "test": "mocha -t 10000"
+    "test": "mocha -t 10000 --require should"
   },
   "repository": "https://github.com/auth10/node-waad",
   "devDependencies": {
-    "mocha": "*"
+    "mocha": "*",
+    "should": "~1.2.1",
+    "lodash": "~1.0.0-rc.3"
   },
   "keywords": [
     "waad",
@@ -20,6 +22,7 @@
     "request": "~2.11.4",
     "jwt-simple": "~0.1.0",
     "moment": "~1.7.2",
-    "async": "~0.1.22"
+    "async": "~0.1.22",
+    "xtend": "~1.0.3"
   }
 }
