--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "node-waad",
-  "version": "1.1.1",
+  "version": "2.0.0",
   "description": "query windows azure active directory",
   "main": "./lib",
   "scripts": {
-    "test": "mocha -t 10000 --require should"
+    "test": "mocha -t 10000 -R spec --require should"
   },
   "repository": "https://github.com/auth0/node-waad",
   "devDependencies": {
